# ai-meeting-notes-agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  TECHNICAL.md  docker-compose.yml  drive_watcher.py  pyproject.toml  reddit-post.md  requirements.txt  setup_server.sh  telegram_bot.py  transcribe.py
.github/workflows/: deploy-ecs.yml
assets/: icon.icns
desktop/: main.js  package.json  preload.js  storage.js
docs/: openagents-claude-integration-research.md
openagents/: upload_brain.py
scripts/: fix-s3-base64.py  generate-task-embeddings.ts  import-competitors.ts  rclone-sync.sh  sync-atlas-to-db.ts
scripts/functions/: search-tasks.js
server/: api_server.py  bot_state.py  telegram_bot.py
server/functions/: atlas-api.js
server/src/models/: transcription.py
server/src/transcription/: transcriber.py
server/src/zoom/: client.py  insforge_db.py  oauth.py  poller.py
src/models/: __init__.py
src/transcription/: __init__.py  transcriber.py
systemd/: drive-watcher.service  rclone-sync.service  rclone-sync.timer
web/: README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
web/functions/: s3-presign.js  workspace-proxy.js
web/src/: App.tsx  api.ts  insforge.ts  main.tsx  theme.css  types.ts
web/src/components/: ChatWidget.css  ChatWidget.tsx  CompetitorView.tsx  ConversationsView.tsx  CustomerDiscoveryView.tsx  ExecutiveReport.tsx  LandingPage.tsx  MarkmapView.tsx  OKRTableView.tsx  OverviewView.tsx  PartnersView.tsx  SettingsView.tsx  Sidebar.tsx  (+8 more)
(+21 files in other folders)
